k8s/apps/news/mylar.yaml
---
# Create Mylar Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mylar
  namespace: news
  labels:
    app.kubernetes.io/name: mylar
    app.kubernetes.io/part-of: mylar
    app.kubernetes.io/release: stable
  annotations:
    a8r.io/description: "Notifies you when new comics are released"
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
    a8r.io/dependencies: "Fetching requires sabnzbd, querying requires Jackett"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: mylar-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mylar-web
        app.kubernetes.io/part-of: mylar
    spec:
      containers:
      - name: mylar-web
        image: lscr.io/linuxserver/mylar3
        volumeMounts:
        - mountPath: /downloads
          name: bulk-recent
          subPath: "recent"
        - mountPath: /comics
          name: bulk-zines
          subPath: "media/zines"
        - mountPath: /config
          name: cfg-mylar
          subPath: "cfg/mylar"
        - mountPath: /torrents
          name: dht-blackhole
          subPath: "blackhole/dht"
        resources:
          requests:
            memory: 512Mi
            cpu: "2"
          limits:
            memory: 1Gi # Probably too high on resource limits, I think it uses -Xmx 256
            cpu: "2"
      volumes:
        - name: bulk-recent
          glusterfs:
            endpoints: glusterfs-cluster
            path: glass_bulk
            readOnly: false
        - name: bulk-zines
          glusterfs:
            endpoints: glusterfs-cluster
            path: glass_bulk
            readOnly: false
        - name: cfg-mylar
          glusterfs:
            endpoints: glusterfs-cluster
            path: glass_cfg
            readOnly: false
        - name: dht-blackhole
          glusterfs:
            endpoints: glusterfs-cluster
            path: glass_cfg
            readOnly: false
---
# Create Mylar Service
apiVersion: v1
kind: Service
metadata:
  name: mylar-service
  namespace: news
  labels:
    app.kubernetes.io/name: mylar-service
    app.kubernetes.io/part-of: mylar
spec:
  selector:
    app.kubernetes.io/name: mylar-web
  ports:
    - port: 8090
      name: mylar-http
---
# Create Mylar IngressRoute
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mylar-ingress
  namespace: news
  labels:
    app.kubernetes.io/name: mylar-ingress
    app.kubernetes.io/part-of: mylar
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`zines.news.madeof.glass`)
      kind: Rule
      middlewares:
      - name: secure-auth
        namespace: news
      services:
        - name: mylar-service
          port: mylar-http
  tls:
    certResolver: letsencrypt
