k8s/apps/news/prowlarr.yaml
---
# Create Prowlarr Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: news
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/part-of: prowlarr
    app.kubernetes.io/release: develop
  annotations:
    a8r.io/description: "Indexer manager and proxy for notification engines"
    a8r.io/owner: "@linuxserver"
    a8r.io/repository: "https://github.com/linuxserver/docker-prowlarr"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr-web
        app.kubernetes.io/part-of: prowlarr
    spec:
      containers:
      - name: prowlarr-web
        image: lscr.io/linuxserver/prowlarr:develop
        volumeMounts:
        - mountPath: /config
          name: cfg-prowlarr
          subPath: "cfg/prowlarr"
        resources:
          requests:
            memory: 512Mi
            cpu: "2"
          limits:
            memory: 1Gi # Probably too high on resource limits, I think it uses -Xmx 256
            cpu: "2"
      volumes:
        - name: cfg-prowlarr
          glusterfs:
            endpoints: glusterfs-cluster
            path: glass_cfg
            readOnly: false
---
# Create Prowlarr Service
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-service
  namespace: news
  labels:
    app.kubernetes.io/name: prowlarr-service
    app.kubernetes.io/part-of: prowlarr
spec:
  selector:
    app.kubernetes.io/name: prowlarr-web
  ports:
    - port: 9696
      name: prowlarr-http
---
# Create Prowlarr IngressRoute
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-ingress
  namespace: news
  labels:
    app.kubernetes.io/name: prowlarr-ingress
    app.kubernetes.io/part-of: prowlarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`conf.news.madeof.glass`)
      kind: Rule
      middlewares:
      - name: secure-auth
        namespace: news
      services:
        - name: prowlarr-service
          port: prowlarr-http
  tls:
    certResolver: letsencrypt
